implementar API de secciones y horarios
